--- a/src/app/views/posts/posts.component.html
+++ b/src/app/views/posts/posts.component.html
@@ -1,3 +1,5 @@
 <app-request-wrapper #postsRs [request$]="posts$">
-  <pre>{{postsRs.data | json}}</pre>
+  <app-grid [gridOptions]="postsGridOptions"
+            [rowData]="postsRs.data">
+  </app-grid>
 </app-request-wrapper>
