--- a/src/app/views/albums/albums.component.html
+++ b/src/app/views/albums/albums.component.html
@@ -1,4 +1,4 @@
-<app-request-wrapper #postsRs [request$]="posts$">
+<app-request-wrapper #postsRs [request$]="albums$">
   <app-grid [gridOptions]="gridOptions"
             [rowData]="postsRs.data">
   </app-grid>
