Add - pages by ID, some cross pages links, link cell renderer

--- a/src/app/views/photos/photos.component.html
+++ b/src/app/views/photos/photos.component.html
@@ -1,37 +1,5 @@
 <app-request-wrapper #photosRs [request$]="photos$">
-  <div class="d-flex mb-3">
-    <nz-pagination nzSize="small"
-                   nzShowSizeChanger
-                   class="ml-auto text-nowrap"
-                   [(nzPageSize)]="pageSize"
-                   [(nzPageIndex)]="pageIndex"
-                   (nzPageSizeChange)="displayPhotos = getDisplayPhotos(photosRs.data)"
-                   (nzPageIndexChange)="displayPhotos = getDisplayPhotos(photosRs.data)"
-                   [nzTotal]="photosRs.data?.length">
-    </nz-pagination>
-  </div>
-  <div class="grid-cards">
-    <nz-card *ngFor="let photo of displayPhotos"
-             style="width: 150px"
-             class="mb-3"
-             [nzCover]="coverTmp">
-      <nz-card-meta [nzTitle]="photo.title"
-                    [nzDescription]="descriptionTmp">
-      </nz-card-meta>
-      <ng-template #descriptionTmp>
-        <a [routerLink]="[photo.id]">
-          <p class="text-right mb-0">
-            <span class="mr-2">Go to</span>
-            <i nz-icon nzType="arrow-right"></i>
-          </p>
-        </a>
-      </ng-template>
-      <ng-template #coverTmp>
-        <img nz-image
-             style="cursor: pointer"
-             [nzSrc]="photo.url"
-             [alt]="photo.url"/>
-      </ng-template>
-    </nz-card>
-  </div>
+  <app-paginated-photos *ngIf="photosRs.data as photos"
+                        [photos]="photos">
+  </app-paginated-photos>
 </app-request-wrapper>
