--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -44,7 +44,7 @@
       </div>
     </nz-content>
     <nz-footer class="text-center py-2">
-      By <a href="https://github.com/alex-bu-93">alex-bu</a>
+      By <a href="https://github.com/alex-bu-93" class="text-link">alex-bu</a>
     </nz-footer>
   </nz-layout>
 </nz-layout>
