--- a/src/styles/customized-bootstrap/styles.scss
+++ b/src/styles/customized-bootstrap/styles.scss
@@ -1,2 +1,9 @@
 @import './variables';
 @import '~node_modules/bootstrap/scss/bootstrap';
+
+.text-link {
+  color: $primary;
+  cursor: pointer;
+  text-decoration: underline;
+  &:hover { text-decoration: none }
+}
