--- a/src/styles/customized-bootstrap/styles.scss
+++ b/src/styles/customized-bootstrap/styles.scss
@@ -1,6 +1,7 @@
 @import './variables';
 @import '~node_modules/bootstrap/scss/bootstrap';
 
+.bg-inherit { background: inherit !important }
 .text-link {
   color: $primary;
   cursor: pointer;
